--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="./build/bundle.css" />
 
+    <script>
+      const global = window;
+    </script>
+
     <script defer src="./build/bundle.js"></script>
   </head>
 
