--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Svelte app</title>
+    <title>Churros</title>
 
     <link rel="icon" type="image/png" href="./favicon.png" />
     <link rel="stylesheet" href="./build/bundle.css" />
-
-    <script>
-      const global = window;
-    </script>
 
     <script defer src="./build/bundle.js"></script>
   </head>
